fixed logo link in top nav, fixed font size on UltraHD and up

--- a/src/style/_resets.scss
+++ b/src/style/_resets.scss
@@ -10,7 +10,12 @@
 */
 
 html {
-    font-size: 10px;
+    font-size: 12px;
+
+    @media screen and (min-width: 1401) {
+        font-size: 16px;
+    }
+
 }
 
 a {
